...
        </TitleShell>

        <SearchShell>
          <SearchBar>
            <SearchIcon name="search" size={18} color="#d2b0ff" />
            <SearchInput
              testID="search-input"
              value={query}
              onChangeText={handleQueryChange}
              placeholder="Artists, tracks, albums"
              placeholderTextColor="#9886b3"
              autoCapitalize="none"
              autoCorrect={false}
            />

            {query.length > 0 ? (
...
