appId: host.exp.Exponent
name: Search and Artist Flow
---
- launchApp
- tapOn:
    id: 'search-input'
- inputText: 'rihanna'
- assertVisible: 'Artists'
- tapOn: 'Rihanna'
- assertVisible: 'Top 5 Tracks'
- assertVisible: 'Albums'
